@@ -5,7 +5,7 @@
 #
 
 LIB_SRCS := arc4random.c bsd_getopt.c err.c fgetln.c inet_net_pton.c \
-	    strlcat.c strlcpy.c md5c.c fmtcheck.c
+	    strlcat.c strlcpy.c md5c.c fmtcheck.c progname.c
 LIB_SRCS := $(patsubst %,src/%,$(LIB_SRCS))
 
 LIB_INCLUDES := err.h getopt.h ip_icmp.h random.h queue.h md5.h string.h \
