@@ -7,6 +7,7 @@ LIBBSD_0.0 {
     fgetwln;
     fmtcheck;
     inet_net_pton;
+    getprogname; setprogname;
     strlcpy;
     strlcat;
     MD5Init;
