@@ -1,6 +1,11 @@
 #ifndef LIBBSD_STDLIB_H
 #define LIBBSD_STDLIB_H
 
-const char *fmtcheck(const char *, const char *);
+#include <stdlib.h>
+
+const char *fmtcheck (const char *, const char *);
+
+char *getprogname ();
+void setprogname (char *);
 
 #endif
